--- a/frontend/src/assets/base.css
+++ b/frontend/src/assets/base.css
@@ -10,6 +10,9 @@
 
   --vt-c-indigo: #2c3e50;
 
+  --vt-c-warn: #bf3030;
+  --vt-c-warn-soft: #bf303050;
+
   --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
   --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
   --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
@@ -32,6 +35,7 @@
 
   --color-heading: var(--vt-c-text-light-1);
   --color-text: var(--vt-c-text-light-1);
+  --color-btn: var(--vt-c-black-soft);
 
   --section-gap: 160px;
 }
@@ -47,6 +51,7 @@
 
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
+    --color-btn: var(--vt-c-white-soft);
   }
 }
 
@@ -83,4 +88,5 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding: 5px;
 }
